@@ -4,6 +4,7 @@ R2003:
 - at should check time boundaries
 - fix: de/activate buttons not working on alarms.html
 - ota could be more verbose on telnet
+- fixed32 encoded IPs should be output in dot notation as ASCII
 
 R2002:
 ======
